--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div> -->
         </div>
         <div class="footer">
-            <p class="footertext">Weather App by <a href="https://codepen.io/wilsoft-gt/">wilsoft-gt</a></p>
+            <p class="footertext">Weather App by <a href="https://codepen.io/wilsoft-gt/" target="_blank">wilsoft-gt</a></p>
         </di>
     </div>
 
