--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Federant|Quicksand" rel="stylesheet"></head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <body class="bodybg" onload="">
    <div class="container">
         <div class="row vertical-center text-center">
@@ -19,14 +20,9 @@
                 <button title="Click to change to °F" class="weatherbtn btn btn-small" >°C</button>
                 <p class="description"></p><br>
             </div>
-                <!-- <div class="card card-body bg-light">
-                    <div class="apitext">
-                    </div>
-                    <h1 id="indexof"></h1>
-                </div> -->
         </div>
         <div class="footer">
-            <p class="footertext">Weather App by <a href="https://codepen.io/wilsoft-gt/" target="_blank">wilsoft-gt</a></p>
+            <p class="footertext">Coded by <a href="https://www.wilsonromero.design/" target="_blank">wilsoft-gt</a> | View code <a href="https://codepen.io/wilsoft-gt/pen/wypzbr" target="_blank"><i class="fa fa-codepen"></i></a> <a href="https://github.com/wilsoft-gt/weatherapp"><i class="fa fa-github"></i></a></p> 
         </di>
     </div>
 
