--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="footer">
             <p class="footertext">Coded by <a href="https://www.wilsonromero.design/" target="_blank">wilsoft-gt</a> | View code <a href="https://codepen.io/wilsoft-gt/pen/wypzbr" target="_blank"><i class="fa fa-codepen"></i></a> <a href="https://github.com/wilsoft-gt/weatherapp"><i class="fa fa-github"></i></a></p> 
-        </di>
+        </div>
     </div>
 
 </body>
